fix modal display on smaller screens

--- a/app/styles/_partials.scss
+++ b/app/styles/_partials.scss
@@ -40,6 +40,7 @@ h2, h3, h4 {
   font-family: 'Roboto', sans-serif;
   color: $primaryText;
   font-weight: 300;
+  margin: 5px auto;
 }
 
 p, a, td {
